Complete swagger. Webpage UI optional
