# swagger.yml
@@ -15,7 +15,7 @@ paths:
   /people:
     get:
       # Package route, in this case controllers/people.py->def read()
-      operationId: "controllers.people.read"
+      operationId: "controllers.people.read_all"
       tags:
         - "People"
       summary: "The people data structure supported by the server application"
@@ -34,3 +34,97 @@ paths:
                   type: "string"
                 timestamp:
                   type: "string"
+
+
+    post:
+      operationId: controllers.people.create
+      tags:
+        - People
+      summary: Create a person and add it to the people list
+      description: Create a new person in the people list
+      parameters:
+        - name: person
+          in: body
+          description: Person to create
+          required: True
+          schema:
+            type: object
+            properties:
+              heroname:
+                type: string
+                description: Superhero name
+              fname:
+                type: string
+                description: First name of person to create
+              lname:
+                type: string
+                description: Last name of person to create
+      responses:
+        201:
+          description: Successfully created person in list
+
+  /people/{heroname}:
+    get:
+      operationId: controllers.people.read_one
+      tags:
+        - People
+      summary: Read one person from the people list
+      description: Read one person from the people list
+      parameters:
+        - name: heroname
+          in: path
+          description: Super Hero name of the person to get from the list
+          type: string
+          required: True
+      responses:
+        200:
+          description: Successfully read person from people list operation
+          schema:
+            properties:
+              fname:
+                type: string
+              lname:
+                type: string
+              timestamp:
+                type: string
+
+
+    delete:
+      operationId: controllers.people.delete
+      tags:
+        - People
+      summary: Delete a person from the people list
+      description: Delete a person
+      parameters:
+        - name: heroname
+          in: path
+          type: string
+          required: True
+      responses:
+        200:
+          description: Successfully deleted a person from people list
+    
+    put:
+      operationId: controllers.people.update
+      tags:
+        - People
+      summary: Update a superhero in the people list
+      description: Update a superhero in the people list
+      parameters:
+        - name: heroname
+          in: path
+          description: Last name of the person to update in the list
+          type: string
+          required: True
+        - name: person
+          in: body
+          schema:
+            type: object
+            properties:
+              fname:
+                type: string
+              lname:
+                type: string
+      responses:
+        200:
+          description: Successfully updated person in people list
